--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <!-- Favicon link -->
+    <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+    
     {% include header.html %}
 </head>
 <body>
